--- a/asp_presentaciones/Pages/Ventanas/Facturas.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Facturas.cshtml
@@ -2,6 +2,7 @@
 @model asp_presentacion.Pages.Ventanas.FacturasModel
 @{
     ViewData["Titulo"] = "Facturas";
+    @*primer rol pal usuario*@ var rol = HttpContext.Session.GetString("Rol");
 }
 <center>
     <div class="container mt-4">
@@ -21,12 +22,16 @@
             <div class="mb-4">
                 <input type="submit" value="Refrescar" asp-page-handler="BtRefrescar" class="btn btn-secondary me-2"
                        disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit" value="Nuevo" asp-page-handler="BtNuevo" class="btn btn-secondary me-2"
-                       disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit" value="Guardar" asp-page-handler="BtGuardar" class="btn btn-secondary me-2"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
-                <input type="submit" value="Cancelar" asp-page-handler="BtCancelar" class="btn btn-secondary"
-                       disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                @*segundo tin de usuario*@ @if (rol != "Huesped")
+                {
+                    <input type="submit" value="Nuevo" asp-page-handler="BtNuevo" class="btn btn-secondary me-2"
+                           disabled="@(Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+
+                    <input type="submit" value="Guardar" asp-page-handler="BtGuardar" class="btn btn-secondary me-2"
+                           disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                    <input type="submit" value="Cancelar" asp-page-handler="BtCancelar" class="btn btn-secondary"
+                           disabled="@(Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Listas)" />
+                }
             </div>
 
             @if (Model.Accion != lib_dominio.Nucleo.Enumerables.Ventanas.Listas ||
@@ -142,6 +147,13 @@
                 <input type="hidden" asp-for="Accion" />
                 @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
             }
+            @if (ViewData.ContainsKey("Mensaje2"))
+            {
+                <input type="hidden"
+                       asp-for="@Model.Accion" />
+                @await Html.PartialAsync("../Emergentes/Mensajes2.cshtml")
+                ;
+            }
 
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
@@ -149,16 +161,13 @@
                     <div class='pp_del_inner'>
                         <div style='width:95%'>
                             <h2>Mensaje</h2>
-                            <h4>Desea borrar la entidad?</h4>
+                            <h4>Desea borrar la Factura?</h4>
                             <h6>
                                 @Model.Actual.Id_Factura,
-                                @Model.Actual.Id_ServicioExtra,
-                                @Model.Actual.Id_Estadia,
-                                @Model.Actual.Id_Reserva,
-                                @Model.Actual.Total,
+                                
                                 @Model.Actual.Metodo_Pago,
-                                @Model.Actual.Cargos_Extra,
-                                @Model.Actual.Reseña
+                               
+                                
                             </h6>
                             <br />
                             <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-secondary" />
@@ -186,7 +195,11 @@
                                 <th>Metodo_Pago</th>
                                 <th>Cargos_Extra</th>
                                 <th>Reseña</th>
-                                <th>Acción</th>
+
+                                @*segundo tin de usuario*@ @if (rol != "Huesped")
+                                {
+                                    <th>Acción</th>
+                                }
                             </tr>
                         </thead>
                         <tbody>
@@ -201,12 +214,15 @@
                                     <td>@elemento.Metodo_Pago</td>
                                     <td>@elemento.Cargos_Extra</td>
                                     <td>@elemento.Reseña</td>
+                                    @*Tercer tin de usuario*@ @if (rol != "Huesped")
+                                    {
                                     <td>
                                         <input type="submit" value="Modificar" asp-page-handler="BtModificar"
                                                class="btn btn-secondary" asp-route-data="@elemento.Id_Factura" />
                                         <input type="submit" value="Borrar" asp-page-handler="BtBorrarVal"
                                                class="btn btn-secondary" asp-route-data="@elemento.Id_Factura" />
                                     </td>
+                                    }
                                 </tr>
                             }
                         </tbody>
