--- a/asp_presentaciones/Pages/Ventanas/Estadias.cshtml
+++ b/asp_presentaciones/Pages/Ventanas/Estadias.cshtml
@@ -2,6 +2,8 @@
 @model asp_presentacion.Pages.Ventanas.EstadiasModel
 @{
     ViewData["Titulo"] = "Estadias";
+    @*primer rol pal usuario*@ var rol = HttpContext.Session.GetString("Rol");
+
 }
 <center>
     <div class="container mt-4">
@@ -52,7 +54,7 @@
                     <div class="mb-3 row">
                         <label class="col-sm-2 col-form-label">Id_Reserva</label>
                         <div class="col-sm-10">
-                            <select asp-for="@Model.Actual!.Id_Reserva" class="form-select" asp-items="@(new SelectList(Model.Reservas, "Id_Reserva", "Id_Huesped"))">
+                            <select asp-for="@Model.Actual!.Id_Reserva" class="form-select" asp-items="@(new SelectList(Model.Reservas, "Id_Reserva", "Id_H"))">
                                 <option value="">-- Seleccione una reserva --</option>
                             </select>
                         </div>
@@ -80,6 +82,14 @@
                 @await Html.PartialAsync("../Emergentes/Mensajes.cshtml")
             }
 
+            @if (ViewData.ContainsKey("Mensaje2"))
+            {
+                <input type="hidden"
+                       asp-for="@Model.Accion" />
+                @await Html.PartialAsync("../Emergentes/Mensajes2.cshtml")
+                
+            }
+
             @if (Model.Accion == lib_dominio.Nucleo.Enumerables.Ventanas.Borrar)
             {
                 <div class='popup'>
@@ -88,8 +98,8 @@
                             <h2>Mensaje</h2>
                             <h4>¿Desea borrar la Estadia?</h4>
                             <h6>
-                                @Model.Actual!.Fecha_Entrada
-                                @Model.Actual!.Fecha_Salida
+                                @Model.Actual!.Id_Estadia
+                                @Model.Actual!.Id_Reserva
                             </h6>
                             <br />
                             <input type="submit" value="Borrar" asp-page-handler="BtBorrar" class="btn btn-danger me-2" />
@@ -113,11 +123,17 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
+
                                 <th>Id_Estadia</th>
                                 <th>Id_Reserva</th>
                                 <th>Fecha_Entrada</th>
                                 <th>Fecha_Salida</th>
-                                <th>Acción</th>
+
+                                @*segundo tin de usuario*@ @if (rol != "Huesped")
+                                {
+                                    <th>Acción</th>
+                                }
+
                             </tr>
                         </thead>
                         <tbody>
@@ -130,6 +146,10 @@
                                         <td>@elemento.Id_Reserva</td>
                                         <td>@elemento.Fecha_Entrada</td>
                                         <td>@elemento.Fecha_Salida</td>
+
+                                        @*Tercer tin de usuario*@ 
+                                        @if (rol != "Huesped")
+                                        {
                                         <td>
                                             <input type="submit" value="Modificar" asp-page-handler="BtModificar"
                                                    class="btn btn-warning btn-sm me-1"
@@ -139,6 +159,7 @@
                                                    class="btn btn-danger btn-sm"
                                                    asp-route-id="@elemento.Id_Estadia" />
                                         </td>
+                                        }
                                     </tr>
                                 }
                             }
